# ExaFree

./: .gitignore  Dockerfile  README.md  entrypoint.sh  package-lock.json  package.json  pyproject.toml
core/: config.py  exa_automation.py  mcp_server.py  moemail_client.py
static/: index.html
