[project]
name = "exafree"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "httpx[socks]==0.27.2",
    "mcp[cli]==1.26.0",
    "pydantic==2.11.0",
    "aiofiles==24.1.0",
    "python-dotenv==1.0.1",
    "itsdangerous==2.1.2",
    "python-multipart==0.0.9",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "requests[socks]==2.32.3",
    "drissionpage==4.0.5.6",
    "playwright==1.55.0",
    "asyncpg>=0.29.0",
]
